# bevy_blender_utils

./: Cargo.toml  README.md
assets/: shooting_squares.blend  shooting_squares.glb  shooting_squares.gltf
bevy_blender_utils/: __init__.py
bevy_blender_utils/shaders/: simple_color.frag  simple_color.vert  vector3.frag
examples/: shooting_squares.rs
src/: bbu_manager.rs  lib.rs
